endpoint connection
add instruction of installing flutter in macos

finished endpoint connection (potential bug)

some problem with  webview package but app is running without problem.

webview of the dailyschedule should be change. Issue with zooming in and out.

In server, unused python file is removed.
