# server/docs/swagger.json
@@ -429,6 +429,59 @@
             }
         },
         "/data/food-menu/{date}": {
+            "get": {
+                "description": "Retrieves the breakfast, lunch, and dinner menu for a specific date from the database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FoodMenu"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "The date of the food menu (YYYY-MM-DD)",
+                        "name": "date",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/databaseTypes.FoodMenu"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "security": [
                     {
@@ -835,11 +888,6 @@
         },
         "/data/school-store/": {
             "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
                 "description": "Retrieves a list of items from the School Store database",
                 "consumes": [
                     "application/json"
@@ -1179,7 +1227,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Lost and Found"
+                    "LostAndFound"
                 ],
                 "summary": "Delete a lost and found item",
                 "operationId": "delete-lost-and-found-item",
